force-app/main/default/objects/RFP_Download_Audit__c/RFP_Download_Audit__c.object-meta.xml
<CustomObject>
    <label>RFP Download Audit</label>
    <nameField>
        <displayFormat>RDA-{00000}</displayFormat>
        <label>RFP Download Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Download Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>