force-app/main/default/objects/RFP_Download_Audit__c/fields/Download_Option__c.field-meta.xml
<CustomField>
    <fullName>Download_Option__c</fullName>
    <label>Download Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Finalized Answers</fullName>
            </value>
            <value>
                <fullName>All Finalized Answers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>