force-app/main/default/objects/RFP_Download_Audit__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Questions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>