force-app/main/default/objects/RFP_Download_Audit__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFP</label>
    <referenceTo>RFP__c</referenceTo>
    <relationshipLabel>RFP Download Audits</relationshipLabel>
    <relationshipName>RFP_Download_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>